@@ -203,9 +203,13 @@ public class NodeSearchEndpointCTest extends AbstractNodeSearchEndpointTest {
 		SchemaUpdateRequest request = tx(
 				() -> JsonUtil.readValue(content().getSchemaContainer().getLatestVersion().getJson(), SchemaUpdateRequest.class));
 		request.getField("teaser").setIndexOptions(new IndexOptions().setAddRaw(true));
+
+		tx(() -> group().addRole(roles().get("admin")));
 		waitForJobs(() -> {
 			call(() -> client().updateSchema(schemaUuid, request));
 		}, COMPLETED, 1);
+		tx(() -> group().removeRole(roles().get("admin")));
+
 	}
 
 	@Test
