@@ -8,7 +8,13 @@ icon:check[] Java REST Client: A potential threading issue within the Java REST 
 
 icon:check[] Fixed handling "required" and "allow" properties of schema fields when adding fields to schemas.
 
-icon:plus[] The *Webroot-Response-Type* header can now be used to differentiate between a webroot binary and node responses. The values of this header can either be *binary* or *node*. 
+icon:plus[] The *Webroot-Response-Type* header can now be used to differentiate between a webroot binary and node responses. The values of this header can either be *binary* or *node*.
+
+icon:plus[] The `/api/v1/admin/status/migrations` endpoint was removed. 
+            The status of a migration job can now be obtained via the `/api/v1/admin/jobs` endpoint. Successfully executed jobs will no longer be removed from the job list.
+
+icon:plus[] The `/api/v1/:projectName/release/:releaseUuid/schemas` and `/api/v1/:projectName/release/:releaseUuid/microschemas` endpoint has been reworked.
+            The response format has been updated. The status and uuid of the job which has been invoked when the migration was started will now also be included in this response. 
 
 == 0.10.1 (08.09.2017)
 
